# AGV-Data-Parser

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main  output.csv
data/: CoBotAGV_v1.xml  CoBotAGV_v2.xml  Forbot_v1.xml  content0  content1  content2  content3  content4  content5  data.csv  ok.csv
src/: config.h  parseBinary.cpp  pugixml.cpp  pugixml.hpp  utils.cpp  utils.h
src/converters/: converter.cpp  converter.h  timestamp_converter.cpp  timestamp_converter.h  uint_converter.cpp  uint_converter.h
